syntax = "proto3";

package node;

// The node control service
service NodeControl {
    // Start DKG process
    rpc StartDkg(StartDkgRequest) returns (StartDkgResponse);
    
    // Create a spending transaction
    rpc SpendFunds(SpendFundsRequest) returns (SpendFundsResponse);
    
    // Start a signing session
    rpc StartSigning(StartSigningRequest) returns (StartSigningResponse);
    
    // Send a direct message to a peer
    rpc SendDirectMessage(SendDirectMessageRequest) returns (SendDirectMessageResponse);

    // Create a deposit intent
    rpc CreateDepositIntent(CreateDepositIntentRequest) returns (CreateDepositIntentResponse);
}

message StartDkgRequest {}

message StartDkgResponse {
    bool success = 1;
    string message = 2;
}

message SpendFundsRequest {
    uint64 amount_satoshis = 1;
    string address_to = 2;
}

message SpendFundsResponse {
    bool success = 1;
    string message = 2;
    string sighash = 3;
}

message CreateDepositIntentRequest {
    uint64 amount_satoshis = 1;
}

message CreateDepositIntentResponse {
    bool success = 1;
    string message = 2;
    string deposit_tracking_id = 3;
    string deposit_address = 4;
}

message StartSigningRequest {
    string hex_message = 1;
}

message StartSigningResponse {
    bool success = 1;
    string message = 2;
    uint64 sign_id = 3;
}

message SendDirectMessageRequest {
    string peer_id = 1;
    string message = 2;
}

message SendDirectMessageResponse {
    bool success = 1;
    string message = 2;
}
